<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_event">

    <fragment
        android:id="@+id/navigation_event"
        android:name="com.mimoupsa.myevents.ui.event.list.ui.EventListFragment"
        android:label="@string/title_event"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_location"
        android:name="com.mimoupsa.myevents.ui.location.ui.LocationFragment"
        android:label="@string/title_location"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.mimoupsa.myevents.ui.favorite.ui.FavoritesFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_event_list" />

</navigation>