<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:chainUseRtl="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_margin="@dimen/dimen10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="@dimen/dimen20"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ivEventdetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/txtEventNameD"
                android:textAppearance="@style/TextAppearanceH1"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="nombre" />

            <TextView
                android:textAppearance="@style/TextAppearanceH2"
                android:layout_marginTop="@dimen/dimen10"
                android:id="@+id/txtEventDateD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="fecha" />


            <TextView
                android:id="@+id/txtEventEmplacementD"
                android:layout_marginTop="@dimen/dimen10"
                android:textAppearance="@style/TextAppearanceH2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="lugar" />

            <LinearLayout
                android:id="@+id/linearAddressInfo"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtEventCityD"
                    android:textAppearance="@style/TextAppearanceP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Salamanca" />

                <TextView
                    android:id="@+id/txtEventProvinceD"
                    tools:text="san sebasstian de los reyes"
                    android:layout_marginHorizontal="@dimen/dimen10"
                    android:textAppearance="@style/TextAppearanceP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtEventPostalCodeD"
                tools:text="codigo postal"
                android:textAppearance="@style/TextAppearanceP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

            <TextView
                android:id="@+id/txtEventInfoD"
                android:layout_marginVertical="@dimen/dimen20"
                tools:text="info"
                android:textAppearance="@style/TextAppearanceP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:id="@+id/txtPrices"
                tools:text="precios"
                android:textAppearance="@style/TextAppearanceH3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>

            <Button
                android:id="@+id/btnBuyTickets"
                android:layout_marginVertical="@dimen/dimen20"
                android:text="@string/button_buy_tickets"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>

            <LinearLayout
                android:id="@+id/linearExternalLinks"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginVertical="@dimen/dimen40"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnFacebook"
                    android:drawableLeft="@drawable/ic_facebook"
                    android:text="@string/detail_facebook"
                    style="@style/BorderlessButtonStyle"
                    android:gravity="center"
                    android:padding="@dimen/dimen10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </Button>

                <Button
                    android:id="@+id/btnHomepage"
                    style="@style/BorderlessButtonStyle"
                    android:drawableLeft="@drawable/ic_website"
                    android:text="@string/detail_homepage"
                    android:gravity="center"
                    android:padding="@dimen/dimen10"
                    android:layout_marginVertical="@dimen/dimen10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </Button>

                <Button
                    android:id="@+id/btnInstagram"
                    android:text="@string/detail_instagram"
                    android:drawableLeft="@drawable/ic_instagram"
                    style="@style/BorderlessButtonStyle"
                    android:gravity="center"
                    android:padding="@dimen/dimen10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </Button>

                <Button
                    android:id="@+id/btnSpotify"
                    android:drawableLeft="@drawable/ic_spotify"
                    android:text="@string/detail_spotify"
                    android:layout_marginVertical="@dimen/dimen10"
                    style="@style/BorderlessButtonStyle"
                    android:gravity="center"
                    android:padding="@dimen/dimen10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </Button>

                <Button
                    android:id="@+id/btnTwitter"
                    android:text="@string/detail_twitter"
                    android:drawableLeft="@drawable/ic_twitter"
                    style="@style/BorderlessButtonStyle"
                    android:gravity="center"
                    android:padding="@dimen/dimen10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </Button>

                <Button
                    style="@style/BorderlessButtonStyle"
                    android:text="Youtube"
                    android:drawableLeft="@drawable/ic_youtube"
                    android:layout_marginVertical="@dimen/dimen10"
                    android:id="@+id/btnYoutube"
                    android:gravity="center"
                    android:padding="@dimen/dimen10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </Button>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>









</androidx.core.widget.NestedScrollView>